# Repo2Readme

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: publish.yml  test.yml
cli/: main.py
docs/: cli-reference.md  configuration.md  examples.md  installation.md  troubleshooting.md  usage.md
loaders/: local_loader.py  repo_loader.py  url_loader.py
readme/: readme_generator.py  tree.py
repo2readme/: config.py
repo2readme/cli/: __init__.py  main.py
repo2readme/llm/: factory.py  init.py
repo2readme/loaders/: __init__.py  loader.py  repo_loader.py
repo2readme/readme/: __init__.py  agent_workflow.py  readme_generator.py  reviewer_agent.py
repo2readme/summarize/: __init__.py  summary.py
repo2readme/summerize/: __init__.py  schema.py  summary.py  summary_chain.py
repo2readme/utils/: __init__.py  detect_language.py  filter.py  force_remove.py  gitignore.py  tree.py
summerize/: schema.py  summary_chain.py
tests/: test_cli_features.py  test_cli_overwrite.py  test_detect_language.py  test_filter.py  test_gitignore.py  test_loader.py  test_symlink_traversal.py
utils/: filter.py
