[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "repo2readme"
version = "0.1.2"
description = "Generate README.md from any GitHub or local repository"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"

authors = [
    { name = "Sarowar Jahan Biswas" }
]

dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "langchain>=0.1.0",
    "GitPython>=3.1",
    "langchain-groq>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "langchain-community",
    "groq>=0.5.0",
    "python-dotenv>=1.0.0",
    "jsonpatch>=1.33,<2.0"
]

[project.urls]
Homepage = "https://github.com/agsaru/repo2readme"
Repository = "https://github.com/agsaru/repo2readme"

[project.scripts]
repo2readme = "repo2readme.cli.main:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["repo2readme*"]


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
"repo2readme" = ["*.md", "*.txt", "*.json"]
